--- a/asctec_hl_interface/CMakeLists.txt
+++ b/asctec_hl_interface/CMakeLists.txt
@@ -29,9 +29,11 @@ set(ASCTEC_HL_INTERFACE_SRC
 
 rosbuild_add_boost_directories()
 
-rosbuild_add_executable(hl_node ${ASCTEC_HL_INTERFACE_SRC} src/node.cpp)
-rosbuild_link_boost(hl_node thread system signals)
+#rosbuild_add_executable(hl_node ${ASCTEC_HL_INTERFACE_SRC} src/node.cpp)
+#rosbuild_link_boost(hl_node thread system signals)
 
-rosbuild_add_executable(ctrl_test src/ctrl_test.cpp)
-rosbuild_add_executable(waypoint_server src/waypoint_server.cpp)
-rosbuild_add_executable(waypoint_client src/waypoint_client.cpp)
+#rosbuild_add_executable(ctrl_test src/ctrl_test.cpp)
+#rosbuild_add_executable(waypoint_server src/waypoint_server.cpp)
+#rosbuild_add_executable(waypoint_client src/waypoint_client.cpp)
+
+rosbuild_add_library(${PROJECT_NAME} ${ASCTEC_HL_INTERFACE_SRC} src/nodelet.cpp)
